// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection should render connected component 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 28px 18px;
}

.emotion-2 {
  padding-left: 280px;
}

<div
    class="emotion-0 emotion-1"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm=""
      searchterm=""
    />
    <main
      class="emotion-2 emotion-3"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl=""
      />
      <mock-collection-controls
        filter="Map {}"
        group="Map {}"
        sortablefields=""
        viewfilters=""
        viewgroups=""
      />
      <mock-entries-collection
        collection="[object Object]"
        filterterm=""
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 28px 18px;
}

.emotion-2 {
  padding-left: 280px;
}

<div
    class="emotion-0 emotion-1"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
    />
    <main
      class="emotion-2 emotion-3"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl="/collections/pages/new"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="[object Object]"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url and path 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 28px 18px;
}

.emotion-2 {
  padding-left: 280px;
}

<div
    class="emotion-0 emotion-1"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
      filterterm="dir1/dir2"
    />
    <main
      class="emotion-2 emotion-3"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl="/collections/pages/new?path=dir1/dir2"
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="[object Object]"
        filterterm="dir1/dir2"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection without create url 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 28px 18px;
}

.emotion-2 {
  padding-left: 280px;
}

<div
    class="emotion-0 emotion-1"
  >
    <mock-sidebar
      collection="[object Object]"
      collections="[object Object]"
    />
    <main
      class="emotion-2 emotion-3"
    >
      <mock-collection-top
        collection="[object Object]"
        newentryurl=""
      />
      <mock-collection-controls />
      <mock-entries-collection
        collection="[object Object]"
      />
    </main>
  </div>
</DocumentFragment>
`;
